# hlk-logger

./: CHANGELOG.md  CMakeLists.txt  README.md
example/: main.cpp
include/hlk/log/: log.cpp  log.h
include/hlk/logger/: abstractlogginghandler.h  abstractmessagebuilder.h  basicmessagelayout.cpp  basicmessagelayout.h  commonmessagebuilder.cpp  commonmessagebuilder.h  filelogginghandler.h  filerotatelogginghandler.h  logger.cpp  logger.h  loggermanager.cpp  loggermanager.h  minilogger.cpp  minilogger.h  terminallogginghandler.h
src/: log.cpp
test/: CMakeLists.txt  main.cpp
